# 2025-SIH-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: main.py
app/core/: config.py
app/routers/: booking.py  chatbot.py  hospitality.py
app/services/: booking.py  chatbot.py  hospitality.py  system_prompt.txt  user.py
app/utils/: auth.py  firebase.py
src/: index.ts
tests/: test_chatbot.py  test_cors.py  test_root.py  test_settings.py
